--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -9,6 +9,7 @@
     "db:push": "prisma db push",
     "db-studio": "prisma studio",
     "db": "bun db:generate && bun db:push",
+    "pnpm:db": "pnpm db:generate && pnpm db:push",
     "build": "tsc"
   },
   "prisma": {
