--- a/apps/cosmos/package.json
+++ b/apps/cosmos/package.json
@@ -35,6 +35,7 @@
     "@next/third-parties": "^14.2.3",
     "@primer/react": "^36.18.0",
     "@prisma/client": "^5.14.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
