--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,8 +8,8 @@
     "db:generate:acc": "prisma generate --accelerate",
     "db:push": "prisma db push",
     "db-studio": "prisma studio",
-    "db": "bun db:generate && bun db:push",
-    "pnpm:db": "pnpm db:generate && pnpm db:push",
+    "db": "bun db:generate:acc && bun db:push",
+    "pnpm:db": "pnpm db:generate:acc && pnpm db:push",
     "build": "tsc"
   },
   "prisma": {
